<resources>
    <string name="app_name">Calc</string>

    <string name="action_settings">Settings</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">\u002B</string>
    <string name="minus">\u2212</string>
    <string name="multiplication">\u00D7</string>
    <string name="division">\u00F7</string>
    <string name="decimal_point">.</string>
    <string name="equal">\u003D</string>
    <string name="root">\u221A</string>
    <string name="factorial">!</string>
    <string name="power">^</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
