<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/dark"
    tools:context=".KeypadFragment">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginRight="-12dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_factorial"
            style="@style/regularButton"
            android:text="@string/factorial" />

        <Button
            android:id="@+id/btn_seven"
            style="@style/regularButton"
            android:text="@string/seven" />

        <Button
            android:id="@+id/btn_four"
            style="@style/regularButton"
            android:text="@string/four" />

        <Button
            android:id="@+id/btn_one"
            style="@style/regularButton"
            android:text="@string/one" />

        <Button
            android:id="@+id/btn_decimal_point"
            style="@style/regularButton"
            android:text="@string/decimal_point" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginRight="-8dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_power"
            style="@style/regularButton"
            android:text="@string/power" />

        <Button
            android:id="@+id/btn_eight"
            style="@style/regularButton"
            android:text="@string/eight" />

        <Button
            android:id="@+id/btn_five"
            style="@style/regularButton"
            android:text="@string/five" />

        <Button
            android:id="@+id/btn_two"
            style="@style/regularButton"
            android:text="@string/two" />

        <Button
            android:id="@+id/btn_zero"
            style="@style/regularButton"
            android:text="@string/zero" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginRight="-8dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_root"
            style="@style/regularButton"
            android:text="@string/root" />

        <Button
            android:id="@+id/btn_nine"
            style="@style/regularButton"
            android:text="@string/nine" />

        <Button
            android:id="@+id/btn_six"
            style="@style/regularButton"
            android:text="@string/six" />

        <Button
            android:id="@+id/btn_three"
            style="@style/regularButton"
            android:text="@string/three" />

        <Button
            android:id="@+id/btn_equals"
            style="@style/regularButton"
            android:text="@string/equal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginRight="-8dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_delete"
            style="@style/regularButton"
            android:text="A" />

        <Button
            android:id="@+id/btn_division"
            style="@style/signButton"
            android:text="@string/division" />

        <Button
            android:id="@+id/btn_multiplication"
            style="@style/signButton"
            android:text="@string/multiplication" />

        <Button
            android:id="@+id/btn_plus"
            style="@style/signButton"
            android:text="@string/plus" />

        <Button
            android:id="@+id/btn_minus"
            style="@style/signButton"
            android:text="@string/minus" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_sidebar"
        android:layout_width="15dp"
        android:layout_height="match_parent"
        android:background="@color/sidebar" />

</LinearLayout>
